--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -24,7 +24,17 @@
 }
 
 html {
+  cursor: none;
   scroll-behavior: smooth;
+}
+
+::selection {
+  background: rgba(246, 92, 138, 0.8);
+  color: rgba(255, 255, 255, 0.6);
+}
+
+* {
+  cursor: none;
 }
 
 .braille {
@@ -55,6 +65,8 @@ html {
 }
 
 body {
+  width: 100vw;
+  height: 100vh;
   font-family: source-han-sans-simplified-c, sans-serif;
   font-weight: 200;
   background: var(--color-black-2);
