--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -152,6 +152,5 @@ a {
 p,
 h2,
 footer {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: source-han-sans-simplified-c, sans-serif;
 }
