--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -42,6 +42,7 @@ html {
   justify-content: center;
   flex-flow: row;
   max-width: 100%;
+  min-height: 1575px;
   width: 100vw;
   font: 11px/12px 'Iosevka Web', monospace;
   color: var(--color-blue-2);
