--- a/src/style/mobile.scss
+++ b/src/style/mobile.scss
@@ -122,6 +122,10 @@
     width: 100vw !important;
     padding: 0 20px;
   }
+
+  .downloadShow {
+     height: 3800px !important;
+  }
 }
 
 @media screen and (max-width: 375px) {
