--- a/src/style/mobile.scss
+++ b/src/style/mobile.scss
@@ -7,9 +7,7 @@
   }
 
   .braille {
-    top: -48%;
-    transform: scale3d(0.8, 0.8, 0.8);
-    left: -17%;
+    display: none;
   }
 
   .braille > * {
