--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -4,7 +4,7 @@
   --color-black-1: #212121;
   --color-black-2: #292929;
   --color-blue-1: #3e4373;
-  --color-blue-2: #5d6398;
+  --color-blue-2: #7478a7;
   --color-red-1: #f65c8a;
   --color-purple-1: #5f5cf6;
   --color-iceBlue-1: #00b5ff;
